[Openshift] Bump xtf and openshift client to 6.x
breaking: OpenshiftClient 5.12 to 6.8 upgrade